2004-04-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCpeeph.c (replaceRule): support empty replacement peephole
	rules
	* src/SDCCmain.c,
	* src/SDCCglobl.h,
	* src/SDCCpeeph.c (getPeepLine): new option --no-peep-comments omits
	comments from the peephole optimizer replacement rules
	* src/SDCCmem.c (printAllocInfoSeg): give actual location of spilled
	symbols
	* src/SDCCcse.c (updateSpillLocation),
	* src/SDCCopt.c (killDeadCode, findReqv): better tracking of register
	equivalents
	* src/hc08/ralloc.c (regTypeNum): pseudo symbols must be in DATA only
	* src/hc08/main.c (_hc08_finaliseOptions): made pointers to stack
	objects far pointers

2004-04-23 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.h: a missing part of my last change
	* src/pic/ralloc.c (regTypeNum),
	* src/pic16/ralloc.c (regTypeNum): fixed statement/declaration order

2004-04-23 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCicode.h,
	* src/SDCCicode.c (aggrToPtrDclType),
	* src/SDCCptropt.h,
	* src/SDCCptropt.c (ptrBaseRematSym, ptrPseudoSymSafe,
	ptrPseudoSymConvert),
	* src/pic/ralloc.c (regTypeNum),
	* src/pic16/ralloc.c (regTypeNum),
	* src/hc08/ralloc.c (regTypeNum),
	* src/ds390/ralloc.c (regTypeNum),
	* src/mcs51/ralloc.c (regTypeNum): check for dependancy hazards before
	creating pseudo symbols (fixed bugs #777768, #930484, and #933966)

2004-04-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* link/z80/lkmain.c (afile),
	* as/hc08/lkmain.c (afile),
	* as/mcs51/lkmain.c (afile): fix suggested by Maarten Brock to
	prevent a pointer problem when a filename has no directory and
	no extension specified.

2004-04-21 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* link/z80/lkmain.c (afile): allow periods in directory names
	* link/z80/lkmain.c (afile),
	* as/mcs51/lkmain.c (afile),
	* as/hc08/lkmain.c (afile): allow linker script file to have an
	extension other than ".lnk"
	* link/z80/lklex.c (getfid),